<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_color"
        android:icon="@drawable/ic_menu_edit1"
        android:title="back_color"
        android:showAsAction="always">
    <menu>
        <group>
            <item android:id="@+id/color_white" android:title="白色"></item>
            <item android:id="@+id/color_red" android:title="红色"></item>
            <item android:id="@+id/color_yellow" android:title="黄色"></item>
            <item android:id="@+id/color_blue" android:title="蓝色"></item>
            <item android:id="@+id/color_green" android:title="绿色"></item>
        </group>
    </menu>
    </item>
    <item android:id="@+id/menu_save"
          android:icon="@drawable/ic_menu_save"
          android:alphabeticShortcut='s'
          android:title="@string/menu_save"
          android:showAsAction="ifRoom|withText" />
    <item android:id="@+id/menu_revert"
          android:icon="@drawable/ic_menu_revert"
          android:title="@string/menu_revert" />
    <item android:id="@+id/menu_delete"
          android:icon="@drawable/ic_menu_delete"
          android:title="@string/menu_delete"
          android:showAsAction="ifRoom|withText" />
    <item
         android:id="@+id/menu_output"
         android:title="Output Note"
         android:showAsAction="ifRoom">

    </item>
</menu>