<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="6dip"
    android:paddingRight="6dip"
    android:paddingBottom="3dip">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="51dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_menu_edit"
            android:background="@drawable/color_select"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@android:id/text1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="5dip"
            android:singleLine="true"
            android:text="@string/test"
            android:background="@drawable/color_select"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:paddingStart="5dip" />

    </LinearLayout>

    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:singleLine="true"
        android:text="@string/time"
        android:background="@drawable/color_select"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="14sp" />
</LinearLayout>
